welcome.lessons.welcome.instructions.InstructionsDrawG.scala.error
Source:2: error: illegal start of simple pattern
for (int i = 0; i < 4; i++ {
           ^Source:2: error: '<-' expected but ';' found.
for (int i = 0; i < 4; i++ {
              ^Source:2: error: '<-' expected but ';' found.
for (int i = 0; i < 4; i++ {
                     ^Source:2: error: illegal start of simple pattern
for (int i = 0; i < 4; i++ {
                           ^Source:6: error: '<-' expected but '}' found.
	}
        ^